# Matchup

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.dagster  Dockerfile.dev  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  unit_tests_overview.txt
orchestration/: .env.orchestration  Dockerfile  __init__.py  assets.py  dagster.yaml  definitions.py  jobs.py  ops.py  pyproject.toml  requirements.txt  schedules.py  sensors.py  workspace.yaml
orchestration/dagster/.telemetry/: id.yaml
orchestration/dagster/history/: runs.db
orchestration/dagster/history/runs/: .db  75717fa2-fac4-4f13-a9d3-e8d7016db1dc.db  7d7a6db9-9f9f-4b50-aa8a-696889df0a66.db  a22b9179-df39-4f32-8fa3-0eb15e1eda62.db  index.db
orchestration/dagster/schedules/: schedules.db
orchestration/dagster/storage/: matchup_engagement  popular_matchups  raw_comments  raw_likes  raw_matchup_items  raw_matchups  top_matchups  trending_matchups
orchestration/dagster/storage/75717fa2-fac4-4f13-a9d3-e8d7016db1dc/compute_logs/: iruiqnmw.err  owitohvo.err  rltpdqrh.err  (+5 more)
orchestration/dagster_home/.telemetry/: id.yaml
orchestration/dagster_home/history/: runs.db
orchestration/dagster_home/history/runs/: index.db
orchestration/dagster_home/schedules/: schedules.db
orchestration/matchup_orchestration/: README.md  pyproject.toml  setup.cfg  setup.py
orchestration/matchup_orchestration/matchup_orchestration/: assets.py  definitions.py
orchestration/matchup_orchestration/matchup_orchestration_tests/: test_assets.py
orchestration/scripts/: backfill_matchup_vote_rollups.py
(+489 files in other folders)
